--- a/Design Digital/ProjetoCurriculoComCSS/fonts/index.html
+++ b/Design Digital/ProjetoCurriculoComCSS/fonts/index.html
@@ -7,26 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <title>Currículo do Muh</title>
-        <style>
-           body{
-            background-image: linear-gradient(to top, #BBA4D7, #58125B);
-           }
-            h3 {
-                color:#374675;
-                background-color:#BBA4D7;
-            }
-            .tit {
-                background-color: #BBA4D7;
-            }
-            #imagem {
-                border: 2px red solid;
-                margin:20px 0px 0px 20px;
-            }
-        </style>
     </head>
     <body>
         <figure>
-            <a href="http://instagram.com/zan.kir" target="_blank"><img id="imagem" src="../img/eu.jpg" alt="foto do murilo" width="20%" height="20%"></a>
+            <a href="http://instagram.com/zan.kir" target="_blank"><img src="../img/eu.jpg" alt="foto do murilo" width="20%" height="20%"></a>
             <figcaption style="color: #58125B;">Murilo Santos</figcaption>
         </figure>
 
@@ -34,8 +18,8 @@
         <hr>
         <br>
         <h3>Dados de Contato</h3>
-        <p class="tit">(01) 011110011</p>
-        <a class="tit" href="mailto:murilo.santos58@fatec.sp.gov.br">murilo.santos58@fatec.sp.gov.br</a>
+        <p>(01) 011110011</p>
+        <a href="mailto:murilo.santos58@fatec.sp.gov.br">murilo.santos58@fatec.sp.gov.br</a>
 
         <h3> Formação Acadêmica </h3>
         <p> Curso DSM </p>
