--- a/DesenvolvimentoWeb/ReceitasFatec/index.html
+++ b/DesenvolvimentoWeb/ReceitasFatec/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
+    <script src="https://kit.fontawesome.com/0a65cbded2.js" crossorigin="anonymous"></script>
     <title>Receitas FATEC</title>
 </head>
+
 <body>
-    
+    <section class="header">
+        <hr>
+        <div class="titulo">
+            <h1> BOLINHA DE CHURROS </h1>
+            <div class="classificacao">
+                <span class="cincoEstrelas">
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                <span class="quatroEstrelas">
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                <span class="tresEstrelas">
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                <span class="duasEstrelas">
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                <span class="umaEstrela">
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                <p class="classificacao" style="position: absolute;">Avalie essa receita</p>
+            </div>
+        </div>
+    </section>
+    <section class="main">
+        <img src="https://static.itdg.com.br/images/640-400/26d099dd5887204f191fc38c0c564f4e/366034-original.jpg">
+        <table>
+            <tr>
+                <td>
+                    Preparo<br>
+                    35 Min
+                </td>
+                <td>
+                    Rendimento<br>
+                    8 PORÇÕES
+                </td>
+                <td>
+                    Favoritos<br>
+                    1168
+                </td>
+                <td>
+                    Comentários<br>
+                    4
+                </td>
+                <td colspan="2">
+                    Tudo Gostoso<br>
+                    Membro desde 2005
+                </td>
+            </tr>
+            
+        </table>
+    </section>
 </body>
+
 </html>
