--- a/DesenvolvimentoWeb/ReceitasFatec/index.html
+++ b/DesenvolvimentoWeb/ReceitasFatec/index.html
@@ -13,7 +13,7 @@
     <section class="header">
         <hr>
         <div class="titulo">
-            <h1> BOLINHA DE CHURROS </h1>
+            <h1 class="laranjinha"> BOLINHA DE CHURROS </h1>
             <div class="classificacao">
                 <span class="cincoEstrelas">
                     <i class="fa-solid fa-star"></i>
@@ -35,33 +35,99 @@
         </div>
     </section>
     <section class="main">
-        <img src="https://static.itdg.com.br/images/640-400/26d099dd5887204f191fc38c0c564f4e/366034-original.jpg">
+        <img src="img/bolinhaChurros.webp">
         <table>
-            <tr>
+            <thead>
+                <tr>
+                    <td class="bordinha">
+                        <span class="laranjinha"><i class="fa-regular fa-clock"></i><br></span>
+                        Preparo<br>
+                        <span class="laranjinha">35 Min</span>
+                    </td>
+                    <td class="bordinha">
+                        <span class="laranjinha"><i class="fa-solid fa-bowl-food"></i><br></span>
+                        Rendimento<br>
+                        <span class="laranjinha">8 PORÇÕES</span>
+                    </td>
+                    <td class="bordinha">
+                        <span class="laranjinha"><i class="fa-regular fa-heart"></i><br></span>
+                        Favoritos<br>
+                        <span class="laranjinha">1168</span>
+                    </td>
+                    <td>
+                        <span class="laranjinha"><i class="fa-regular fa-message"></i><br></span>
+                        Comentários<br>
+                        <span class="laranjinha">4</span>
+                    </td>
+                    <td class="tudoGostoso"><img id="gostoso" src="img/81eeYYoOQjL.png" alt=""></i></td>
+                    <td colspan="2" >
+                        <span class="laranjinha">TUDOGOSTOSO<br></span>
+                        Membro desde 2005
+                    </td>
+                    </tr>
+                    <tr>
+                        <td colspan="6">
+                            <h4></h4>
+                            <br>
+                        </td>
+                    </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td colspan="6">
+                        <h2><i class="fa-solid fa-basket-shopping"></i> Ingredientes</h2>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="6">
+                        <h3> Massa </h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="lista" colspan="6">
+                        <ul>
+                            <li>200ml de água</li>
+                            <li>1 colher (sopa) de manteiga</li>
+                            <li>4 colheres (sopa) de açúcar</li>
+                            <li>1 colher (chá) de canela em pó</li>
+                            <li>1 xícara de farinha de trigo</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="6">
+                        <h3> Empanamento </h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="lista" colspan="6">
+                        <ul>
+                            <li>1 colher (sopa) de canela</li>
+                            <li>1/2 xícara de açúcar</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="6">
+                        <h3> Recheio </h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="lista" colspan="6">
+                        <ul>
+                            <li>150g de doce de leite</li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+            <tfoot>
                 <td>
-                    Preparo<br>
-                    35 Min
+                <button><i class="fa-solid fa-cart-shopping"></i>   Comprar ingredientes</button>
                 </td>
-                <td>
-                    Rendimento<br>
-                    8 PORÇÕES
-                </td>
-                <td>
-                    Favoritos<br>
-                    1168
-                </td>
-                <td>
-                    Comentários<br>
-                    4
-                </td>
-                <td colspan="2">
-                    Tudo Gostoso<br>
-                    Membro desde 2005
-                </td>
-            </tr>
-            
+            </tfoot>
         </table>
     </section>
+
 </body>
 
 </html>
