--- a/DesenvolvimentoWeb/ReceitasFatec/index.html
+++ b/DesenvolvimentoWeb/ReceitasFatec/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <script src="https://kit.fontawesome.com/0a65cbded2.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
     <title>Receitas FATEC</title>
 </head>
 
@@ -80,7 +83,7 @@
                 </tr>
                 <tr>
                     <td colspan="6">
-                        <h3> Massa </h3>
+                        <h3> MASSA </h3>
                     </td>
                 </tr>
                 <tr>
@@ -96,7 +99,7 @@
                 </tr>
                 <tr>
                     <td colspan="6">
-                        <h3> Empanamento </h3>
+                        <h3> EMPANAMENTO </h3>
                     </td>
                 </tr>
                 <tr>
@@ -109,7 +112,7 @@
                 </tr>
                 <tr>
                     <td colspan="6">
-                        <h3> Recheio </h3>
+                        <h3> RECHEIO </h3>
                     </td>
                 </tr>
                 <tr>
