--- a/DesenvolvimentoWeb/ProjetoPacotes/index.html
+++ b/DesenvolvimentoWeb/ProjetoPacotes/index.html
@@ -14,7 +14,11 @@
     <input type="radio" name="pacotes" id="" value="1000"><label>Pacote 1</label>
     <input type="radio" name="pacotes" id="" value="2000"><label>Pacote 2</label>
     <input type="radio" name="pacotes" id="" value="3000"><label>Pacote 3</label><br>
-    <button onclick="calcular()"> Calcular Pacote com Desconto </button>
-
+    <label>Adicionais:</label>
+    <input type="checkbox" name="alimentacao" value="300"><label>Alimentação</label>
+    <input type="checkbox" name="veiculo" value="150"><label>Veículo</label>
+    <input type="checkbox" name="translado" value="50"><label>Translado</label><br>
+    <button onclick="calcular()"> Calcular Pacote </button>
+    <h3 id="totalViagem"></h3>
 </body>
 </html>
