--- a/DesenvolvimentoWeb/Luminoso/fonts/home.html
+++ b/DesenvolvimentoWeb/Luminoso/fonts/home.html
@@ -1,49 +1,79 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/0a65cbded2.js" crossorigin="anonymous"></script>
-    <title>Lumina Tech Consulting</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/0a65cbded2.js" crossorigin="anonymous"></script>
+  <title>Lumina Tech Consulting</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Poppins:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
+    defer></script>
+  <script src="../script.js" defer></script>
 </head>
+
 <body>
 
-    <header class="header">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="./home.html">LuminaLogo</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Parceiros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                  <button class="btn btn-dark" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                  <button class="btn btn-dark" href="">Login</button>
-                </form>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main>
+  <header class="header">
+    <nav class="navBar">
+      <img src="../img/whiteLogo.png" alt="">
+      <ul>
+        <li><a href="http://" class="barItem">Home</a></li>
+        <li><a href="http://" class="barItem">Sobre</a></li>
+        <li><a href="http://" class="barItem">Parceiros</a></li>
+        <li><a href="http://" class="barItem">Blog</a></li>
+        <input type="text" placeholder="Buscar..." id="buscar" name="buscar">
+        <label for="buscar"><svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 45 45"
+            fill="none">
+            <g clip-path="url(#clip0_8_9)">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M30.0503 31.7597C26.8611 34.5503 22.6872 36.2416 18.1208 36.2416C8.11208 36.2416 0 28.1295 0 18.1208C0 8.11208 8.11208 0 18.1208 0C28.1295 0 36.2416 8.11208 36.2416 18.1208C36.2416 22.6872 34.5503 26.8671 31.7597 30.0503L44.6436 42.9342C45.1148 43.4054 45.1148 44.1725 44.6436 44.6436C44.1725 45.1148 43.4054 45.1148 42.9342 44.6436L30.0503 31.7597ZM33.8255 18.1208C33.8255 26.7946 26.7946 33.8255 18.1208 33.8255C9.44698 33.8255 2.41611 26.7946 2.41611 18.1208C2.41611 9.44698 9.44698 2.41611 18.1208 2.41611C26.7946 2.41611 33.8255 9.44698 33.8255 18.1208Z"
+                fill="white" />
+            </g>
+            <defs>
+              <clipPath id="clip0_8_9">
+                <rect width="45" height="45" fill="white" />
+              </clipPath>
+            </defs>
+          </svg></label>
+        <input type="button" value="Login" id="loginBtn">
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <div class="slides">
+        <img class="slideItem" src="../img/banner-home-1.png" style="width:100%">
+        <img class="slideItem" src="../img/banner-home-1.png" style="width:100%">
+        <img class="slideItem" src="../img/banner-home-1.png" style="width:100%">
+        <p class="texto">Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod tempor<br>
+          incididunt ut labore et dolore magna<br> aliqua ut enim ad minim veniam. <br><br><button
+            class="saibaMais">Saiba Mais</button></p>
+        <p class="texto">BBB<br><br><br><br><br><button class="saibaMais">Saiba Mais</button></p>
+        <p class="texto">CCC<br><br><br><br><br><button class="saibaMais">Saiba Mais</button></p>
+        <div class="mudarDiv">
+          <span class="divAtual" onclick="mostrarDiv(1)"><span class="circulo"></span></span>
+          <span class="divAtual" onclick="mostrarDiv(2)"><span class="circulo"></span></span>
+          <span class="divAtual" onclick="mostrarDiv(3)"><span class="circulo"></span></span>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="a">
+        <p>pqp essa porra nao aparece</p>
+      </div>
+    </section>
+  </main>
+  <footer>
 
-    </main>
+  </footer>
 </body>
+
 </html>
