--- a/DesenvolvimentoWeb/Luminoso/pages/home.html
+++ b/DesenvolvimentoWeb/Luminoso/pages/home.html
@@ -25,10 +25,10 @@
     <nav class="navBar">
       <img src="../img/whiteLogo.png" alt="">
       <ul>
-        <li><a href="./home.html" class="barItem" onclick="paginaAtiva(home)">Home</a></li>
-        <li><a href="http://" class="barItem" onclick="paginaAtiva(sobre)">Sobre</a></li>
-        <li><a href="http://" class="barItem" onclick="paginaAtiva(parceiros)">Parceiros</a></li>
-        <li><a href="http://" class="barItem" onclick="paginaAtiva(blog)">Blog</a></li>
+        <li><a href="./home.html" class="barItem ativo">Home</a></li>
+        <li><a href="http://" class="barItem">Sobre</a></li>
+        <li><a href="http://" class="barItem">Parceiros</a></li>
+        <li><a href="http://" class="barItem">Blog</a></li>
         <input type="text" placeholder="Buscar..." id="buscar" name="buscar">
         <label for="buscar"><svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 45 45"
             fill="none">
@@ -87,11 +87,15 @@
     </section>
     <section>
       <div class="metas">
-        <div class="metasAlcancadas">
-          <h2>Presentes em 10 estados</h2>
-          <h2>750+ contratos firmados</h2>
-          <h2>1000+ empresas cadastradas</h2>
-          <h2>1500+ empregos gerados</h2>
+        <div class="metasTexto">
+          <div>
+            <h2>Presentes em 10 estados</h2>
+            <h2>1000+ empresas cadastradas</h2>
+          </div>
+          <div>
+            <h2>750+ contratos firmados</h2>
+            <h2>1500+ empregos gerados</h2>
+          </div>
         </div>
         <button class="facaParte botaoGeral">Faça parte</button>
       </div>
